[tool.poetry]
name = "clovers-apscheduler"
version = "0.1.4"
description = ""
authors = ["KarisAya <1048827424@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.10.4"
clovers = "^0.1.8"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
