[project]
name = "clovers-apscheduler"
version = "0.2.2"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["clovers (>=0.4.3,<0.5)", "apscheduler (>=3.11.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
